--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    Hello HTML !!!
+    <label style="text-align: center;width:300px;display: inline-block;">
+        Hello HTML !!!
+    </label> 
+    <label style="text-align: center;width:300px;display: inline-block;">
+        Hello HTML !!!
+    </label>   
+    <a href="http://www.google.com">
+        <img src="google.png" alt=""
+         style="width:100px">
+         <label>Google<label>
+    </a>
 </body>
 </html>
