--- a/index.html
+++ b/index.html
@@ -12,10 +12,30 @@
     <label style="text-align: center;width:300px;display: inline-block;">
         Hello HTML !!!
     </label>   
-    <a href="http://www.google.com">
-        <img src="google.png" alt=""
-         style="width:100px">
+    <a href="http://www.google.com" style="text-align: center;display: block;">
+        <img src="images/google.png" alt=""
+         style="width:75px">
          <label>Google<label>
+    </a>
+    <a href="http://www.youtube.com" style="text-align: center;display: block;">
+        <img src="images/youtube.png" alt=""
+        style="width:75px">
+         <label>Youtube<label>
+    </a>
+    <a href="http://www.facebook.com" style="text-align: center;display: block;">
+        <img src="images/facebook.png" alt=""
+        style="width:75px">
+         <label>Facebook<label>
+    </a>
+    <a href="https://en.wikipedia.org/wiki/Wiki" style="text-align: center;display: block;">
+        <img src="images/wiki.jfif" alt=""
+        style="width:75px">
+         <label>Wikipedia<label>
+    </a>
+    <a href="https://www.instagram.com/" style="text-align: center;display: block;">
+        <img src="images/Instagram.jfif" alt=""
+        style="width:75px">
+         <label>Instagram<label>
     </a>
 </body>
 </html>
