--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          <label>Google<label>
     </a>
     <a href="http://www.youtube.com" style="text-align: center;display: block;">
-        <img src="images/youtube.png" alt=""
+        <img src="images/youtube.jfif" alt=""
         style="width:75px">
          <label>Youtube<label>
     </a>
