--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <label style="text-align: center;width:300px;display: inline-block;">
+    <!-- <label style="text-align: center;width:300px;display: inline-block;"> 
         Hello HTML !!!
     </label> 
     <label style="text-align: center;width:300px;display: inline-block;">
         Hello HTML !!!
-    </label>   
+    </label> -->  
     <a href="http://www.google.com" style="text-align: center;display: block;">
         <img src="images/google.png" alt=""
          style="width:75px">
