completed 1st homework

--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
     <a href="http://www.google.com" style="text-align: center;display: block;">
         <img src="images/google.png" alt=""
          style="width:75px">
-         <label>Google<label>
+         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Google</label>
     </a>
     <a href="http://www.youtube.com" style="text-align: center;display: block;">
         <img src="images/youtube.jfif" alt=""
         style="width:75px">
-         <label>Youtube<label>
+         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Youtube</label>
     </a>
     <a href="http://www.facebook.com" style="text-align: center;display: block;">
         <img src="images/facebook.png" alt=""
         style="width:75px">
-         <label>Facebook<label>
+         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Facebook</label>
     </a>
     <a href="https://en.wikipedia.org/wiki/Wiki" style="text-align: center;display: block;">
         <img src="images/wiki.jfif" alt=""
         style="width:75px">
-         <label>Wikipedia<label>
+         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Wikipedia</label>
     </a>
     <a href="https://www.instagram.com/" style="text-align: center;display: block;">
         <img src="images/Instagram.jfif" alt=""
         style="width:75px">
-         <label>Instagram<label>
+         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Instagram</label>
     </a>
 </body>
 </html>
