1st css homework

--- a/index.html
+++ b/index.html
@@ -3,39 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/useful_sites.css">
     <title>Document</title>
 </head>
-<body>
-    <!-- <label style="text-align: center;width:300px;display: inline-block;"> 
-        Hello HTML !!!
-    </label> 
-    <label style="text-align: center;width:300px;display: inline-block;">
-        Hello HTML !!!
-    </label> -->  
-    <a href="http://www.google.com" style="text-align: center;display: block;">
-        <img src="images/google.png" alt=""
-         style="width:75px">
-         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Google</label>
+<body> 
+    <a class="site-anchor" href="http://www.google.com">
+        <img class="site-image" src="images/google.png" alt="">
+         <label class="site-name">Google</label>
     </a>
-    <a href="http://www.youtube.com" style="text-align: center;display: block;">
-        <img src="images/youtube.jfif" alt=""
-        style="width:75px">
-         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Youtube</label>
+    <a class="site-anchor" href="http://www.youtube.com">
+        <img class="site-image" src="images/youtube.jfif" alt="">
+         <label class="site-name">Youtube</label>
     </a>
-    <a href="http://www.facebook.com" style="text-align: center;display: block;">
-        <img src="images/facebook.png" alt=""
-        style="width:75px">
-         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Facebook</label>
+    <a class="site-anchor" href="http://www.facebook.com">
+        <img class="site-image" src="images/facebook.png" alt="">
+         <label class="site-name">Facebook</label>
     </a>
-    <a href="https://en.wikipedia.org/wiki/Wiki" style="text-align: center;display: block;">
-        <img src="images/wiki.jfif" alt=""
-        style="width:75px">
-         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Wikipedia</label>
+    <a class="site-anchor" href="https://en.wikipedia.org/wiki/Wiki">
+        <img class="site-image" src="images/wiki.jfif" alt="">
+         <label class="site-name">Wikipedia</label>
     </a>
-    <a href="https://www.instagram.com/" style="text-align: center;display: block;">
-        <img src="images/Instagram.jfif" alt=""
-        style="width:75px">
-         <label style= "width: 200px; display: inline-block; text-align: left; font-size: 20px">Instagram</label>
+    <a class="site-anchor" href="https://www.instagram.com/">
+        <img class="site-image" src="images/Instagram.jfif" alt="">
+         <label class="site-name">Instagram</label>
     </a>
 </body>
 </html>
